--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.boge.bogebook.ui.fragments.BlankFragment">
+    tools:context=".mvp.ui.fragments.BlankFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
