--- a/app/src/main/res/layout/item_recommend.xml
+++ b/app/src/main/res/layout/item_recommend.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
+        android:layout_alignParentLeft="true"
         android:id="@+id/iv_txt_icon"
         android:layout_width="@dimen/book_img_width"
         android:layout_height="@dimen/book_img_height"
@@ -13,7 +13,9 @@
         android:layout_margin="@dimen/item_margin"
         />
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_toRightOf="@+id/iv_txt_icon"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center">
@@ -33,4 +35,12 @@
             android:padding="@dimen/item_padding"
             android:textSize="@dimen/small_size"/>
     </LinearLayout>
-</LinearLayout>
+    <ImageView
+        android:id="@+id/iv_not_read"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/red"
+        android:layout_margin="@dimen/item_margin"/>
+</RelativeLayout>
