--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -18,7 +18,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/ranking"/>
+            app:title="@string/ranking"
+            app:navigationIcon="@mipmap/ab_back"/>
 
     </android.support.design.widget.AppBarLayout>
 
