--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="MyTabLayoutTextAppearance">
+        <item name="android:textColor">@color/light_gray</item>
+        <item name="android:textSize">@dimen/middle_size</item>
+    </style>
+
 </resources>
