--- a/app/src/main/res/layout/item_book_list.xml
+++ b/app/src/main/res/layout/item_book_list.xml
@@ -53,5 +53,6 @@
         android:layout_marginLeft="@dimen/item_margin"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/common_h3"/>
+        android:background="@color/common_h3"
+        android:layout_marginBottom="2dp"/>
 </RelativeLayout>
