--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,11 +9,14 @@
     <dimen name="item_marginTop">8dp</dimen>
     <dimen name="item_marginRight">8dp</dimen>
     <dimen name="item_padding">4dp</dimen>
-    <dimen name="small_size">12sp</dimen>
-    <dimen name="middle_size">14sp</dimen>
-    <dimen name="large_size">16sp</dimen>
-    <dimen name="x_large_size">18sp</dimen>
-    <dimen name="very_large_size">20sp</dimen>
+    <dimen name="small_size">14sp</dimen>
+    <dimen name="middle_size">16sp</dimen>
+    <dimen name="large_size">18sp</dimen>
+    <dimen name="x_large_size">20sp</dimen>
+    <dimen name="very_large_size">22sp</dimen>
     <dimen name="item_margin">8dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
+    <dimen name="item_margin1">12dp</dimen>
 </resources>
