--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -65,6 +65,8 @@
     <color name="gender_select_female_pressed">#EEA2AD</color>
 
 
+    <color name="btn1">#7CCD7C</color>
+
     <color name="tag0">#9900b9da</color>
     <color name="tag1">#55660099</color>
     <color name="tag2">#88CD950C</color>
