--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,4 +18,18 @@
         <item>好评</item>
         <item>完结</item>
     </string-array>
+
+    <string-array name="recommend_item_long_click_choice">
+        <item>置顶</item>
+        <item>书籍详情</item>
+        <item>移入养肥区</item>
+        <item>缓存全本</item>
+        <item>删除</item>
+        <item>批量管理</item>
+    </string-array>
+    <string-array name="local_item_long_click_choice">
+        <item>置顶</item>
+        <item>删除</item>
+        <item>批量管理</item>
+    </string-array>
 </resources>
