--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -14,6 +14,8 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="5dp"
+        android:textSize="@dimen/small_size"
+        android:textColor="@color/white"
         />
 
 </LinearLayout>
