添加分类搜索小说

--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -48,6 +48,7 @@
                     android:layout_marginBottom="8dp"
                     android:textStyle="bold"
                     android:textSize="@dimen/middle_size"
+                    android:singleLine="true"
                     />
                 <TextView
                     android:layout_below="@+id/tv_book_title"
