--- a/app/src/main/res/layout/activity_categort_book.xml
+++ b/app/src/main/res/layout/activity_categort_book.xml
@@ -29,7 +29,8 @@
             android:layout_alignParentTop="true"
             android:id="@+id/type_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:padding="@dimen/item_margin"/>
         <View
             android:layout_below="@+id/type_recyclerView"
             android:id="@+id/line"
@@ -40,13 +41,20 @@
             android:layout_below="@+id/line"
             android:id="@+id/minor_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-        <!--<fragment-->
-            <!--android:layout_below="@+id/minor_recyclerView"-->
-            <!--android:id="@+id/fragment"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--tools:layout="@layout/fragment_categort_book"></fragment>-->
+            android:layout_height="wrap_content"
+            android:padding="@dimen/item_margin"/>
+        <View
+            android:layout_below="@+id/minor_recyclerView"
+            android:id="@+id/line1"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/common_h2"/>
+        <android.support.v7.widget.RecyclerView
+            android:layout_below="@+id/line1"
+            android:id="@+id/book_recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <ProgressBar
             android:layout_centerInParent="true"
             android:id="@+id/progressBar"
