--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="item_marginTop">8dp</dimen>
     <dimen name="item_marginRight">8dp</dimen>
     <dimen name="item_padding">4dp</dimen>
+    <dimen name="small_size_1">12sp</dimen>
     <dimen name="small_size">14sp</dimen>
     <dimen name="middle_size">16sp</dimen>
     <dimen name="large_size">18sp</dimen>
