完善书单详细信息

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="gray">#b8b8b8</color>
     <color name="transparent">#00000000</color>
 
-    <color name="white1">#FFFAF0</color>
+    <color name="white1">#FFE4B5</color>
     <color name="light_white">#EEEEEE</color>
     <color name="light_black">#515151</color>
     <color name="light_pink">#fb9090</color>
