--- a/app/src/main/res/layout/content_book_list_detail.xml
+++ b/app/src/main/res/layout/content_book_list_detail.xml
@@ -10,9 +10,10 @@
     tools:showIn="@layout/activity_book_list_detail">
 
     <RelativeLayout
+        android:id="@+id/rl_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/common_gray_bg"
+        android:background="@color/white"
         android:padding="@dimen/item_margin">
         <com.boge.bogebook.view.CircleOrRectImage
             android:id="@+id/iv_author"
@@ -21,8 +22,7 @@
             android:layout_width="36dp"
             android:layout_height="36dp"
             app:isCircle="false"
-            app:orderRadius="8dp"
-            android:src="@mipmap/test1"/>
+            app:orderRadius="8dp"/>
         <TextView
             android:id="@+id/tv_book_list_author"
             android:layout_toRightOf="@+id/iv_author"
@@ -31,7 +31,6 @@
             android:layout_marginLeft="@dimen/item_margin"
             android:textColor="@color/light_coffee"
             android:textSize="@dimen/small_size"
-            android:text="12asdasdadqwadqw3"
             />
         <TextView
             android:id="@+id/tv_date"
@@ -42,7 +41,6 @@
             android:layout_marginLeft="@dimen/item_margin"
             android:layout_marginTop="2dp"
             android:textSize="@dimen/small_size_1"
-            android:text="6tian"
             />
         <TextView
             android:id="@+id/tv_title"
@@ -50,7 +48,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/item_margin"
-            android:text="系统阿斯达"
             android:singleLine="true"
             android:textSize="@dimen/small_size"
             android:textStyle="bold"/>
@@ -60,7 +57,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/item_margin"
-            android:text="系统阿qqeqadqw斯达"
             android:singleLine="true"
             android:textSize="@dimen/small_size" />
         <com.boge.bogebook.view.CircleOrRectImage
@@ -68,8 +64,7 @@
             android:layout_below="@+id/tv_desc"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="@dimen/item_margin"
-            android:src="@mipmap/test1"/>
+            android:layout_marginTop="@dimen/item_margin"/>
         <TextView
             android:id="@+id/tv_author"
             android:layout_toRightOf="@+id/iv_author_1"
@@ -78,18 +73,39 @@
             android:layout_height="30dp"
             android:gravity="center"
             android:layout_marginTop="@dimen/item_margin"
-            android:layout_marginLeft="@dimen/item_margin"
-            android:text="创建自"/>
+            android:layout_marginLeft="@dimen/item_margin"/>
         <LinearLayout
+            android:id="@+id/ll_share"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/tv_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="@dimen/item_margin"
-            android:background="@drawable/layout_share_bg">
-
+            android:background="@drawable/layout_share_bg"
+            android:gravity="center">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/share"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/share"
+                android:textColor="@color/dark_red"
+                android:textSize="@dimen/small_size_1"/>
         </LinearLayout>
     </RelativeLayout>
-
+    <View
+        android:id="@+id/line"
+        android:layout_below="@+id/rl_top"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/common_h2"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_below="@+id/line"
+        android:id="@+id/book_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"/>
 </RelativeLayout>
