--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,18 +8,18 @@
     tools:context="com.boge.bogebook.mvp.ui.activity.ReaderActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
         android:visibility="gone">
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:title="@string/book_detail"
+            app:navigationIcon="@mipmap/ab_back" />
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
@@ -27,4 +27,63 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"></FrameLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+    <include layout="@layout/layout_read_aa_set" />
+
+    <LinearLayout
+        android:id="@+id/llBookReadBottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/reader_menu_bg_color"
+        android:clickable="true"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tvBookReadMode"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/ic_menu_mode_night_normal"
+            android:gravity="center"
+            android:text="@string/book_read_mode_day"
+            android:textColor="@color/book_read_bottom_text"
+            android:textSize="@dimen/book_read_bottom_text" />
+
+        <TextView
+            android:id="@+id/tvBookReadSettings"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/ic_menu_settings_normal"
+            android:gravity="center"
+            android:text="@string/book_read_settings"
+            android:textColor="@color/book_read_bottom_text"
+            android:textSize="@dimen/book_read_bottom_text" />
+
+        <TextView
+            android:id="@+id/tvBookReadDownload"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/ic_reader_ab_download"
+            android:gravity="center"
+            android:text="@string/book_read_download"
+            android:textColor="@color/book_read_bottom_text"
+            android:textSize="@dimen/book_read_bottom_text" />
+
+        <TextView
+            android:id="@+id/tvBookReadToc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableTop="@drawable/ic_menu_toc_normal"
+            android:gravity="center"
+            android:text="@string/book_read_toc"
+            android:textColor="@color/book_read_bottom_text"
+            android:textSize="@dimen/book_read_bottom_text" />
+
+    </LinearLayout>
+
+</RelativeLayout>
