--- a/app/src/main/res/layout/item_read_theme.xml
+++ b/app/src/main/res/layout/item_read_theme.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingLeft="6dp"
-    android:paddingRight="6dp">
+    android:paddingRight="6dp"
+    android:background="@color/reader_menu_bg_color">
 
-    <com.boge.bogebook.view.CircleOrRectImage
+    <ImageView
         android:id="@+id/ivThemeBg"
         android:layout_width="45dp"
         android:layout_height="45dp"
         app:isCircle="true"
+        android:layout_centerInParent="true"
         />
 
     <ImageView
